# Pycord-Template

./: .env  .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  settings.py
cogs/: template.py
